2005-10-12  Wim Taymans  <wim@fluendo.com>

	* check/pipelines/simple_launch_lines.c: (run_pipeline):
	* examples/seeking/Makefile.am:
	* examples/seeking/cdplayer.c: (play_cb), (pause_cb), (stop_cb):
	* examples/seeking/seek.c: (make_avi_msmpeg4v3_mp3_pipeline),
	(do_seek), (set_update_scale), (message_received), (main):
	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_commit),
	(gst_ring_buffer_read), (gst_ring_buffer_clear):
	Update for _get_state() API change.

2005-10-11  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create):
	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_commit),
	(gst_ring_buffer_read):
	Cleanups.
	Commit and read from ringbuffer in samples rather than bytes.

2005-10-11  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_render):
	Respect segment rate and accum when scheduling samples.

2005-10-11  Julien MOUTTE  <julien@moutte.net>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_queue_pads),
	(gst_ogg_mux_collected): Quick hack to fix build. We need to handle
	EOS correctly, that needs more work.

2005-10-11  Wim Taymans  <wim@fluendo.com>

	* check/generic/states.c: (GST_START_TEST):
	remove old property.

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_submit_packet),
	(gst_ogg_demux_perform_seek):
	* ext/theora/theoradec.c: (theora_dec_sink_event):
	* ext/vorbis/vorbisdec.c: (vorbis_dec_sink_event),
	(vorbis_handle_data_packet):
	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	(gst_base_rtp_depayload_set_gst_timestamp):
	* gst/videorate/gstvideorate.c: (gst_videorate_event):
	Update for newsegment API change.

2005-10-11  Michael Smith <msmith@fluendo.com>

	* gst/playback/gstplaybin.c: (gst_play_bin_send_event_to_sink),
	(do_playbin_seek), (gst_play_bin_send_event):
	  Override send_event differently, so that we can takes bits of